--- a/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
@@ -48,5 +48,9 @@
         <dd>
             @Html.DisplayFor(model => model.State)
         </dd>
+    </dl>
+</div>
+@Html.ActionLink("Choose Sport", "Create", "Sport")
+
 
 
