--- a/Sports Capstone/Sports Capstone/Views/Sport/Create.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Sport/Create.cshtml
@@ -23,10 +23,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TypeOfPlay, htmlAttributes: new { @class = "control-label col-md-2" })
+         
+            @Html.LabelFor(model => model.TypeOfPlay, htmlAttributes:  new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TypeOfPlay, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TypeOfPlay, "cool", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TypeOfPlay, new { htmlAttributes = new { @class = "form-control" } })                      
+                @Html.ValidationMessageFor(model => model.TypeOfPlay, "", new { @class = "text-danger" })
             </div>
         </div>
 
