--- a/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
@@ -39,5 +39,6 @@
 </div>
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Create Event", "Create", "PlayingEvent")
+
 </p>
