Changed my playing event model around

--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
@@ -42,6 +42,30 @@
             @Html.DisplayFor(model => model.EndTime)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SportName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SportName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TypeOfPlay)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TypeOfPlay)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SkillLevel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SkillLevel)
+        </dd>
+
     </dl>
 </div>
 <p>
