Finshed I want to input a location user story

--- a/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
@@ -40,5 +40,7 @@
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Create Event", "Create", "PlayingEvent")
-
+</p>
+<p>
+    @Html.ActionLink("Join Event", "Find", "PlayingEvent")
 </p>
