--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Create.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Create.cshtml
@@ -46,6 +46,13 @@
             @Html.ValidationMessageFor(model => model.PlayersAllowed, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
 
     @*<div class="form-group">
