--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
@@ -11,12 +11,12 @@
     <hr />
     <dl class="dl-horizontal">
         @*<dt>
-            @Html.DisplayNameFor(model => model.Players.FirstName)
-        </dt>
+                @Html.DisplayNameFor(model => model.Players.FirstName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Players.FirstName)
-        </dd>*@
+            <dd>
+                @Html.DisplayFor(model => model.Players.FirstName)
+            </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Location)
@@ -82,14 +82,62 @@
             @Html.DisplayFor(model => model.PlayersAllowed)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+
     </dl>
 </div>
 
-<table>
+<style>
+    /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+    #map {
+        height: 400px;
+        width: 700px;
+    }
+</style>
+<br />
+<div class="row">
+    <div id="map"></div>
+    <script>
+        var map;
+            function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: { lat: @Model.lat , lng: @Model.lng  },
+                    zoom: 8
+                });
+            }
+    </script>
 
-@*Add index type table here to display current players*@
-</table>
+    <script src=@ViewBag.thing
+            async defer></script>
+</div>
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
+<script>
+    function initMap() {
+        var mapOptions = {
+            zoom: 8,
+            center: new google.maps.LatLng(@Model.lat, @Model.lng),
+            mapTypeId: 'roadmap'
+        };
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+        var goldenGatePosition = { lat: @Model.lat, lng: @Model.lng };
+        var marker = new google.maps.Marker({
+            position: goldenGatePosition,
+            map: map,
+            title: 'The Stu'
+        });
+
+    }
+</script>
