Added to the create in the MessageBoard controller and made an index and create view for it

--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
@@ -120,6 +120,10 @@
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to List", "Index")
+
+
+    @Html.ActionLink("Create Message", "Create", "MessageBoard")
+
 </p>
 
 
