Added to the create and details in controller

--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Index.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Index.cshtml
@@ -17,13 +17,13 @@
     </p>
 }
 
-    @using (Html.BeginForm("PlayerSearch", "PlayingEvent"))
+    @*@using (Html.BeginForm("PlayerSearch", "PlayingEvent"))
     {
         <p>
             PlayerSearch: @Html.TextBox("SearchString") <br />
             <input type="submit" value="Filter" />
         </p>
-    }
+    }*@
 
         @*<form asp-controller="PlayingEvent" asp-action="Search" method="get">
                 <p>
