--- a/Sports Capstone/Sports Capstone/Views/Home/About.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is my 2 week Capstone project. I came up with the idea when I was 10 years old. 
+    I loved going out and playing sports with my friends but sometimes my friends couldn't 
+    always play and I would have no one to play with. I thought it would be awesome if there
+    was some way I could find people to play the sports that I loved. This web application does
+    just that.</p>
