--- a/Sports Capstone/Sports Capstone/Views/Home/Contact.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    2727 Five Mile Rd<br />
+    Racine, WI 53402<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    262.939.7827
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong>   <a href="mailto:MichaelRackowski@gmail.com">MichaelRackowski@gmail.com</a><br />
+    @*<strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>*@
 </address>
