--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
@@ -89,8 +89,29 @@
         <dd>
             @Html.DisplayFor(model => model.Address)
         </dd>
-
     </dl>
+</div>
+<div>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Players)
+            </th>
+            <th></th>
+        </tr>
+        @foreach (var item in Model.Players)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.ActionLink("Message", "Create", "MessageBoard")
+                </td>
+            </tr>
+        }
+   </table>
+
 </div>
 
 <style>
@@ -109,7 +130,7 @@
             function initMap() {
                 map = new google.maps.Map(document.getElementById('map'), {
                     center: { lat: @Model.lat , lng: @Model.lng  },
-                    zoom: 8
+                    zoom: 28
                 });
             }
     </script>
@@ -122,7 +143,7 @@
     @Html.ActionLink("Back to List", "Index")
 
 
-    @Html.ActionLink("Create Message", "Create", "MessageBoard")
+    @Html.ActionLink("View Players in your playing event", "Index", "MessageBoard")
 
 </p>
 
@@ -130,7 +151,7 @@
 <script>
     function initMap() {
         var mapOptions = {
-            zoom: 8,
+            zoom: 12,
             center: new google.maps.LatLng(@Model.lat, @Model.lng),
             mapTypeId: 'roadmap'
         };
@@ -140,7 +161,7 @@
         var marker = new google.maps.Marker({
             position: goldenGatePosition,
             map: map,
-            title: 'The Stu'
+            title: 'Playing Event'
         });
 
     }
