Added logic to messageBoard controler

--- a/Sports Capstone/Sports Capstone/Views/MessageBoard/Index.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/MessageBoard/Index.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayNameFor(model => model.Messages)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.Rating)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.Review)
         </th>
         <th></th>
     </tr>
@@ -35,10 +35,10 @@
             @Html.DisplayFor(modelItem => item.Messages)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
+            @Html.DisplayFor(modelItem => item.Rating)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LastName)
+            @Html.DisplayFor(modelItem => item.Review)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
