Added styling to all the detial and index views using internal css

--- a/Sports Capstone/Sports Capstone/Views/Home/About.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Home/About.cshtml
@@ -1,11 +1,21 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About my project";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h3>@ViewBag.Message</h3>*@
+<style>
+    .p {
+        height: 150px;
+        font-size: 18px;
+        width: 40%;
+        text-align: center;
+        padding-top: 10px;
+        color: mediumaquamarine;
+    }
+</style>
 
-<p>This is my 2 week Capstone project. I came up with the idea when I was 10 years old. 
-    I loved going out and playing sports with my friends but sometimes my friends couldn't 
+    <p> This is my 2 week Capstone project. I came up with the idea when I was 10 years old.
+    I loved going out and playing sports with my friends but sometimes my friends couldn't
     always play and I would have no one to play with. I thought it would be awesome if there
     was some way I could find people to play the sports that I loved. This web application does
-    just that.</p>
+    just that.</p >
