--- a/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
@@ -4,9 +4,26 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+@*<h2>Details</h2>*@
+
+<style>
+    .dl-horizontal {
+        height: 150px;
+        font-size: 18px;
+        width: 40%;
+        text-align: center;
+        padding-top: 10px;
+        color: mediumaquamarine;
+    }
+</style>
+<style>
+    .table {
+        color: orangered;
+        text-align: center;
+    }
+</style>
 <div>
-    <h4>Player</h4>
+    <h4>"Player Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
