--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Join.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Join.cshtml
@@ -10,5 +10,5 @@
 </p>
 
 <p>
-    @Html.ActionLink("Back to events","Details","Sport")
+    @Html.ActionLink("View the Event","Details"@*,new { id = playingEvent.Id }*@)
 </p>
