--- a/Sports Capstone/Sports Capstone/Views/Home/Index.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         height: 300px;
         font-size: 16px;
         width: 150%;
-        color: violet;
+        color: deepskyblue;
     }
 </style>
 <div class="jumbotron">
