--- a/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Player/Details.cshtml
@@ -8,7 +8,7 @@
 
 <style>
     .dl-horizontal {
-        height: 150px;
+        height: 280px;
         font-size: 18px;
         width: 40%;
         text-align: center;
@@ -23,7 +23,7 @@
     }
 </style>
 <div>
-    <h4>"Player Details</h4>
+    <h4>Player Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
