--- a/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
@@ -20,7 +20,7 @@
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.DisplayNameFor(model => model.SportName)
+            @Html.DisplayNameFor(model => model.SportName) :
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TypeOfPlay)
+            @Html.DisplayNameFor(model => model.TypeOfPlay) :
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SkillLevel)
+            @Html.DisplayNameFor(model => model.SkillLevel) :
         </dt>
 
         <dd>
