Added text alignment to sport details view and changed hight to fit to page in playingevent view

--- a/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/PlayingEvent/Details.cshtml
@@ -12,7 +12,7 @@
 <style>
    
     .dl-horizontal {
-        height: 90px;
+        height: 500px;
         width: 50%;
         text-align: center;
         padding-top: 10px;
@@ -47,7 +47,7 @@
             </dd>*@
 
         <dt>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.Location) :
         </dt>
 
         <dd>
@@ -55,7 +55,7 @@
         </dd>
         
         <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
+            @Html.DisplayNameFor(model => model.StartTime) :
         </dt>
 
         <dd>
@@ -63,7 +63,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EndTime)
+            @Html.DisplayNameFor(model => model.EndTime) :
         </dt>
 
         <dd>
@@ -71,7 +71,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SportName)
+            @Html.DisplayNameFor(model => model.SportName) :
         </dt>
 
         <dd>
@@ -79,7 +79,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TypeOfPlay)
+            @Html.DisplayNameFor(model => model.TypeOfPlay) :
         </dt>
 
         <dd>
@@ -87,7 +87,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SkillLevel)
+            @Html.DisplayNameFor(model => model.SkillLevel) :
         </dt>
 
         <dd>
@@ -95,7 +95,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CurrentPlayers)
+            @Html.DisplayNameFor(model => model.CurrentPlayers) :
         </dt>
 
         <dd>
@@ -103,7 +103,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PlayersAllowed)
+            @Html.DisplayNameFor(model => model.PlayersAllowed) : 
         </dt>
 
         <dd>
@@ -111,7 +111,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Address) :
         </dt>
 
         <dd>
