--- a/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/Sport/Details.cshtml
@@ -10,7 +10,8 @@
     .dl-horizontal {
         height: 240px;
         width: 20%;
-        color: lightseagreen;
+        color: Highlight;
+         text-align: center;
         font-size: 22px;
     }
 </style>
