Fixed the rating on the messageboard index view

--- a/Sports Capstone/Sports Capstone/Views/MessageBoard/Index.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/MessageBoard/Index.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Messages)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Rating)
+            @Html.DisplayNameFor(model => model.Rating) out of 5
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Review)
