--- a/Sports Capstone/Sports Capstone/Views/MessageBoard/Create.cshtml
+++ b/Sports Capstone/Sports Capstone/Views/MessageBoard/Create.cshtml
@@ -31,7 +31,7 @@
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Rating, " Rating out of 5", htmlAttributes: new { @class = "control-label col-md-2" }) 
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
